SourceMetaData/src/objects/Interaction__c.object
<CustomObject>
    <description>An Interaction with an individual that may then result in one or more goals.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person account of the customer who has created the interaction</description>
        <inlineHelpText>The person account of the customer who has created the interaction</inlineHelpText>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A description of the interaction</description>
        <inlineHelpText>A description of the interaction</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Origin_Type__c</fullName>
        <description>The interaction type of the origin (this picklist may be better as a record type)</description>
        <inlineHelpText>The interaction type of the origin (this picklist may be better as a record type)</inlineHelpText>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Telephone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face-to-face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>CASE(TEXT( Origin_Type__c ),
&quot;Email&quot;, IMAGE(&quot;https://eu2.salesforce.com/img/icon/mail16.png&quot;,&quot;&quot;,16,16),
&quot;Face-to-face&quot;, IMAGE(&quot;https://eu2.salesforce.com/img/icon/people16.png&quot;,&quot;&quot;,16,16),
&quot;F2F&quot;, IMAGE(&quot;https://eu2.salesforce.com/img/icon/people16.png&quot;,&quot;&quot;,16,16),
&quot;Telephony&quot;, IMAGE(&quot;https://eu2.salesforce.com/img/icon/phone16.png&quot;,&quot;&quot;,16,16),
&quot;Telephone&quot;, IMAGE(&quot;https://eu2.salesforce.com/img/icon/phone16.png&quot;,&quot;&quot;,16,16),
&quot;Letter&quot;, IMAGE(&quot;https://eu2.salesforce.com/img/icon/documents16.png&quot;,&quot;&quot;,16,16),
&quot;&quot;)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Interaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Origin_Type__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Int{00000000}</displayFormat>
        <label>Int Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>